--- a/index.html
+++ b/index.html
@@ -3,19 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-
-    <div class="container"> <!----- Abuelo ----->
-
-        <div> <!----- Padre ----->
-            <h1 id="title">Hello, Cruel World!</h1>
-            <p data-par="">This is a simple HTML document :P</p>
-        </div>
+    <div class="container main-container"> 
+        <div class="item-container item-1"></div>
+        <div class="item-container item-2"></div>
+        <div class="item-container item-3"></div>
+        <div class="item-container item-4"></div>
     </div>
-    
-    
+
+    <div class="item-container item-4"></div>
+
 </body>
 </html>
